# ChangeLog for dev-util/makeheaders
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/makeheaders/ChangeLog,v 1.2 2012/02/20 04:18:17 floppym Exp $

  20 Feb 2012; Mike Gilbert <floppym@gentoo.org> metadata.xml:
  Drop no-herd.

*makeheaders-0_p4 (03 Oct 2011)

  03 Oct 2011; Michael Weber <xmw@gentoo.org> +makeheaders-0_p4.ebuild,
  +metadata.xml:
  Initial import from my overlay
