@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/makeheaders
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/makeheaders/ChangeLog,v 1.2 2012/02/20 04:18:17 floppym Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/makeheaders/ChangeLog,v 1.3 2012/05/08 15:49:02 ago Exp $
+
+  08 May 2012; Agostino Sarubbo <ago@gentoo.org> makeheaders-0_p4.ebuild:
+  Stable for amd64, wrt bug #415133
 
   20 Feb 2012; Mike Gilbert <floppym@gentoo.org> metadata.xml:
   Drop no-herd.
